@@ -1,3 +1,9 @@
+4 November 2012
++ Make new validation_privileged category
+
+25 October 2012
++ Add uncore test
+
 14 September 2012
 + Add simultaneous_group_overflow test
 + Add simultaneous_overflow
